--- a/sass/site/additional.scss
+++ b/sass/site/additional.scss
@@ -1,9 +1,160 @@
 .additional{
+  &__warp {
+    @media (min-width: $tablet ) {
+      padding: 0;
+      //padding: 0 40px;
+    }
+    @media (min-width: $desktop ) {
+      padding: 0;
+    }
+  }
 
   &__title {
     @include font(normal, 24px, 24px);
     @media (min-width: $tablet ) {
       @include font(normal, 36px, 36px);
+    }
+    &--indent {
+      padding-bottom: 35px;
+      @media (min-width: $tablet ) {
+        padding-bottom: 75px;
+        padding-left: 35px;
+      }
+    }
+  }
+
+  &__item {
+    /*@media (min-width: $desktop) {
+      width: 100%;
+      display: flex;
+    }*/
+    &--indent {
+      padding: 14px 0 18px 0;
+
+      @media (min-width: $tablet ) {
+        padding: 25px 35px 35px 35px;
+      }
+    }
+    &--bodred {
+      @media (min-width: $tablet ) {
+        border-top: 1px solid rgba($diz, .5);
+        border-right: 1px solid rgba($diz, .5);
+        border-left: 1px solid rgba($diz, .5);
+      }
+      &:last-child {
+        @media (min-width: $tablet ) {
+          border-bottom: 1px soli rgba($diz, .5);
+        }
+      }
+
+    }
+  }
+
+  &__tablet {
+    @media (min-width: $tablet ) {
+      display: flex;
+      justify-content: space-between;
+      &--indent {
+        @media (min-width: $tablet ) {
+          margin-bottom: 17px;
+        }
+      }
+    }
+  }
+
+  &__desktop {
+    @media (min-width: $desktop ) {
+      display: flex;
+    }
+  }
+
+  &__item-name {
+    @include font(normal, 16px, 16px);
+    text-transform: uppercase;
+    @media (min-width: $tablet ) {
+      @include font(normal, 20px, 20px);
+    }
+    &--indent {
+      padding-bottom: 10px;
+      @media (min-width: $tablet ) {
+        padding-bottom: 0;
+      }
+    }
+  }
+  &__params {
+    display: flex;
+    justify-content: space-between;
+    @media (min-width: $tablet ) {
+
+    }
+    &--indent {
+      padding-bottom: 13px;
+      @media (min-width: $tablet ) {
+        padding-bottom: 0;
+      }
+    }
+  }
+  &__description {
+
+    &--indent {
+      @media (min-width: $tablet ) {
+        padding-right: 60px;
+      }
+    }
+  }
+  &__button {
+    margin: 0 auto;
+    text-transform: uppercase;
+    @include font(normal, 16px, 20px);
+    @media (min-width: $tablet ) {
+      @include font(normal, 20px, 20px);
+    }
+  }
+  &__photo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-shrink: 1;
+    @media (min-width: $tablet ) {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+    @media (min-width: $desktop ) {
+      flex-direction: column;
+    }
+    &__text {
+
+      &--color {
+        color: $white;
+      }
+    }
+    &--bg {
+      background: #63a73a url('/img/gift-photo-mobile.png') no-repeat center;
+      height: 289px;
+      @media (min-width: $tablet ) {
+        background: #63a73a url('/img/gift-photo-tablet.png') no-repeat center;
+        height: 200px;
+      }
+      @media (min-width: $desktop ) {
+        background: #63a73a url('/img/gift-photo-desktop.png') no-repeat center;
+        height: 289px;
+      }
+    }
+    &--color {
+      color: $white;
+    }
+    &--indent {
+      margin: 40px 0;
+      @media (min-width: $tablet ) {
+        margin-top: 60px;
+        margin-bottom: 70px;
+      }
+    }
+  }
+  &__gift {
+
+    .svg {
+      @include square-size(60px);
     }
   }
 }
