--- a/css/main.css
+++ b/css/main.css
@@ -57,20 +57,6 @@ a {
     z-index: 11;
     pointer-events: none;
     display: none; }
-    .maket__pos--mobile {
-      display: block; }
-      @media (min-width: 321px) {
-        .maket__pos--mobile {
-          display: none; } }
-    @media (min-width: 321px) {
-      .maket__pos--tablet {
-        display: block; } }
-    @media (min-width: 1440px) {
-      .maket__pos--tablet {
-        display: none; } }
-    @media (min-width: 1440px) {
-      .maket__pos--desktop {
-        display: block; } }
 
 .breakpoint {
   position: fixed;
@@ -1465,6 +1451,16 @@ h1 {
 .additional__gift .svg {
   width: 60px;
   height: 60px; }
+
+.additional__gift--indent {
+  padding-top: 65px;
+  padding-bottom: 50px; }
+  @media (min-width: 768px) {
+    .additional__gift--indent {
+      padding-top: 0; } }
+
+.additional__text {
+  font: normal 16px/20px "Oswald", sans-serif; }
 
 .footer__block {
   display: -webkit-box;
