--- a/sass/site/additional.scss
+++ b/sass/site/additional.scss
@@ -7,6 +7,15 @@
     @media (min-width: $desktop ) {
       padding: 0;
     }
+    &--indent {
+      padding-bottom: 45px;
+      @media (min-width: $tablet ) {
+        padding-bottom: 0;
+      }
+      @media (min-width: $desktop ) {
+        padding-bottom: 85px;
+      }
+    }
   }
 
   &__title {
@@ -17,36 +26,88 @@
     &--indent {
       padding-bottom: 35px;
       @media (min-width: $tablet ) {
-        padding-bottom: 75px;
+        padding-bottom: 78px;
         padding-left: 35px;
+      }
+      @media (min-width: $desktop ) {
+        padding-bottom: 85px;
+        padding-left: 0;
+      }
+    }
+    &--xx1 {
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      &:after, &:before{
+        content: ' ';
+        display: block;
+        height: 1px;
+        background-color: #000;
+        flex-grow: 1;
+      }
+      &:after{
+        margin-left: 100px;
+      }
+      &:before{
+        margin-right: 100px;
       }
     }
   }
-
-  &__item {
-    /*@media (min-width: $desktop) {
-      width: 100%;
-      display: flex;
-    }*/
+  &__items {
+    @media (min-width: $desktop) {
+      width: 75%;
+    }
     &--indent {
-      padding: 14px 0 18px 0;
-
+      margin-bottom: 40px;
       @media (min-width: $tablet ) {
-        padding: 25px 35px 35px 35px;
+        margin-bottom: 75px;
+      }
+      @media (min-width: $desktop) {
+        margin-bottom: 0;
+        margin-right: 40px;
       }
     }
-    &--bodred {
+  }
+  &__item {
+    @media (min-width: $desktop) {
+      //width: 100%;
+      display: flex;
+      align-items: center;
+    }
+    &---push {
+      margin: 0 -20px;
+      padding-right: 20px;
+      padding-left: 20px;
       @media (min-width: $tablet ) {
-        border-top: 1px solid rgba($diz, .5);
+        margin: 0;
+        padding: 0;
+      }
+    }
+    &--indent {
+      padding-top: 15px;
+      padding-bottom: 15px;
+
+      @media (min-width: $tablet ) {
+        padding: 25px 35px;
+      }
+      @media (min-width: $desktop) {
+        padding: 15px 0;
+      }
+    }
+    &--border {
+      border-top: 1px solid rgba($diz, .5);
+
+      &:last-child {
+          border-bottom: 1px solid rgba($diz, .5);
+      }
+      @media (min-width: $tablet ) {
         border-right: 1px solid rgba($diz, .5);
         border-left: 1px solid rgba($diz, .5);
       }
-      &:last-child {
-        @media (min-width: $tablet ) {
-          border-bottom: 1px soli rgba($diz, .5);
-        }
+      @media (min-width: $desktop) {
+        border-right: 0;
+        border-left: 0;
       }
-
     }
   }
 
@@ -56,9 +117,16 @@
       justify-content: space-between;
       &--indent {
         @media (min-width: $tablet ) {
-          margin-bottom: 17px;
+          margin-bottom: 24px;
+        }
+        @media (min-width: $desktop ) {
+          margin-bottom: 0;
+          margin-right: 50px;
         }
       }
+    }
+    @media (min-width: $desktop ) {
+      flex-grow: 1;
     }
   }
 
@@ -105,9 +173,16 @@
   &__button {
     margin: 0 auto;
     text-transform: uppercase;
+    width: 100%;
     @include font(normal, 16px, 20px);
     @media (min-width: $tablet ) {
-      @include font(normal, 20px, 20px);
+      width: 100%;
+      //@include font(normal, 20px, 20px);
+    }
+    @media (min-width: $desktop ) {
+      width: auto;
+      padding-left: 95px;
+      padding-right: 95px;
     }
   }
   &__photo {
@@ -121,11 +196,18 @@
     }
     @media (min-width: $desktop ) {
       flex-direction: column;
+      width: 25%;
     }
     &__text {
 
       &--color {
         color: $white;
+      }
+      &--indent {
+        padding-bottom: 50px;
+        @media (min-width: $tablet ) {
+          padding-bottom: 0;
+        }
       }
     }
     &--bg {
@@ -137,17 +219,24 @@
       }
       @media (min-width: $desktop ) {
         background: #63a73a url('/img/gift-photo-desktop.png') no-repeat center;
-        height: 289px;
+        height: auto;
       }
     }
     &--color {
       color: $white;
     }
     &--indent {
-      margin: 40px 0;
+      @media (min-width: $desktop ) {
+        margin-left: 40px;
+      }
+    }
+    &--indent1 {
+      margin-top: 40px;
       @media (min-width: $tablet ) {
-        margin-top: 60px;
-        margin-bottom: 70px;
+        margin-top: 65px;
+      }
+      @media (min-width: $desktop ) {
+        margin: 0;
       }
     }
   }
