--- a/sass/site/element.scss
+++ b/sass/site/element.scss
@@ -49,10 +49,10 @@
       @include font(normal, 20px, 20px);
     }
     &--indent {
-      padding-top: 23px;
+      padding-top: 25px;
       padding-bottom: 15px;
       @media (min-width: $tablet ) {
-        padding-bottom: 16px;
+        padding-bottom: 30px;
       }
     }
     &--all-indent {
@@ -66,7 +66,7 @@
   &__description {
     width: 100%;
     &--indent {
-      padding-bottom: 25px;
+      padding-bottom: 20px;
       @media (min-width: $tablet ) {
         padding-bottom: 35px;
       }
@@ -100,11 +100,13 @@
   }
 
   &__button {
-    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 100%;
     text-transform: uppercase;
     @include font(normal, 16px, 20px);
     @media (min-width: $tablet ) {
       @include font(normal, 20px, 20px);
+      margin-bottom: 0;
     }
   }
   &--bg {
@@ -116,17 +118,20 @@
     border-top: 1px solid rgba($diz, .5);
     border-right: 1px solid rgba($diz, .5);
     border-left: 1px solid rgba($diz, .5);
+    @media (min-width: $tablet ) {
+      border: 0;
+    }
   }
-  &--border-down {
-      border-bottom: 1px solid rgba($diz, .5);
+  &--border-all {
+      border: 1px solid rgba($diz, .5);
   }
   &--indent {
-    padding: 8px 20px;
+    padding: 0 20px;
     //border: 1px solid red;
     margin: 0 -20px;
     @media (min-width: $tablet ) {
-      margin-top: 155px;
-      padding: 120px 40px 40px 40px;
+      margin-top: 130px;
+      padding: 140px 40px 40px 40px;
     }
   }
   &--all-push {
@@ -135,10 +140,10 @@
     padding-left: 20px;
   }
   &--all-indent {
-    padding-bottom: 30px;
+    //padding-bottom: 30px;
     @media (min-width: $tablet ) {
-      margin-top: 155px;
-      padding: 50px 40px 40px 40px;
+      margin-top: 130px;
+      padding: 80px 40px 40px 40px;
     }
   }
 }
