--- a/sass/site/nav.scss
+++ b/sass/site/nav.scss
@@ -26,7 +26,7 @@
       &:focus {
         color: rgba($black,.3);
       }
-      &:active {
+      &.active {
         border-color: $primary;
       }
     }
